# GgmlDotNet

./: .gitattributes  .gitignore  .gitmodules  GgmlDotNet.sln  README.md  ReplateRule.md
.github/workflows/: docfx.yml
docfx/: GenerateDocmenet.ps1.ps1  RunDocumentServer.ps1  docfx.json  index.md
docker/: BuildDevel.ps1  BuildRuntime.ps1
docker/base/ubuntu/18/cpu/x64/: Dockerfile
docker/devel/ubuntu/18/cpu/x64/: Dockerfile
docker/runtime/ubuntu/18/: Dockerfile
docker/test/ubuntu/18/: runTest.sh
examples/Whisper/: BeamSearch.cs  Buffer.cs  Callbacks.cs  EModel.cs  Greedy.cs  Pair.cs  Program.cs  Utils.cs  Whisper.cs  Whisper.csproj  WhisperContext.cs  WhisperFilters.cs  WhisperFullParams.cs  WhisperHParams.cs  WhisperLayerDecoder.cs  WhisperLayerEncoder.cs  WhisperMel.cs  WhisperModel.cs  WhisperParams.cs  WhisperPrintUserData.cs  WhisperSamplingStrategy .cs  WhisperSegment.cs  WhisperTokenData.cs  WhisperVocab.cs
nuget/: BuildAndroid.ps1  BuildOSX.ps1  BuildUbuntu16.ps1  BuildUbuntu18.ps1  BuildUtils.ps1  BuildWindows.ps1  CreateAllPackage.ps1  CreatePackage.ps1  Makefile  Publish.ps1  RunBuildContainer.ps1  RunTestContainer.ps1  TestPackage.ps1  TestPackageOSX.ps1  TestPackageUbuntu18.ps1  TestPackageWindows.ps1  run-android.sh
nuget/nuspec/: ggmlDotNet.CPU.nuspec
src/GgmlDotNet/: Ggml.Oprations.cs  Ggml.SystemInfo.cs  Ggml.cs  GgmlCGraph.cs  GgmlContext.cs  GgmlDotNet.csproj  GgmlInitParams.cs  GgmlNativeObject.cs  GgmlObject.cs  GgmlOp.cs  GgmlTensor.cs  GgmlType.cs  Std.cs
src/GgmlDotNet.Native/: CMakeLists.txt  version.rc.in
src/GgmlDotNet.Native/ggml/: config.h  ggml.cpp  ggml.hpp  stdlib.cpp  string.cpp
src/GgmlDotNet.Native/ggml/cstd/: string.hpp
src/GgmlDotNet.Native/src/: config.hpp  stdlib.h  string.hpp
src/GgmlDotNet.Native/src/cstd/: string.h
src/GgmlDotNet/Interop/: InteropHelper.cs
src/GgmlDotNet/PInvoke/: Ggml.cs  NativeMethods.cs  WindowsLibraryLoader.cs
src/GgmlDotNet/PInvoke/CStd/: CStd.cs
src/GgmlDotNet/PInvoke/StdLib/: StdLib.cs
src/GgmlDotNet/Util/: StringHelper.cs
test/GgmlDotNet.Tests/: GgmlDotNet.Tests.csproj  GgmlTest.Operations.cs  GgmlTest.cs  TestBase.cs
